--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -5,11 +5,9 @@ body {
 }
 
 #chat {
-    position: absolute;
-    top: 70px;
-    height: 400px;
-    width: 400px;
-    overflow-y: auto;
+    min-height: 200px;
+    right: 10px;
+    left: 30px;
 }
 
 .msg {
@@ -18,29 +16,42 @@ body {
     width: 400px;
 }
 
-.self {
-}
-
 .others {
     background: lightblue;
 }
 
 #textField {
-    width: 200px;
+    width: 300px;
 }
 
 #header {
-    position: absolute;
-    top: 30px;
     width: 400px;
     height: 40px;
     font-weight: bold;
 }
 
 #footer {
-    position: absolute;
-    top: 500px;
     width: 400px;
     height: 40px;
     font-weight: bold;
+}
+
+.fadeIn-hide, .fadeIn-show {
+    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.0s;
+    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.0s;
+    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.0s;
+    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.0s;
+}
+
+.fadeIn-show {
+    opacity:0;
+}
+.fadeIn-show.fadeIn-show-active {
+    opacity:1;
+}
+.fadeIn-hide {
+    opacity:1;
+}
+.fadeIn-hide.fadeIn-hide-active {
+    opacity:0;
 }
