adapting project for Typesafe Activator

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,14 +6,22 @@
     <head>
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+
+        <script src="@routes.Assets.at("javascripts/vendor/angular-1.1.5.min.js")"></script>
+        <script src="@routes.Assets.at("javascripts/app.js")"></script>
+        <script src="@routes.Assets.at("javascripts/services.js")"></script>
+        <script src="@routes.Assets.at("javascripts/controllers.js")"></script>
+        
     </head>
     <body ng-app="sseChat">
         
         <div ng-controller="ChatCtrl">
             <div id="header">
                 Your Name: <input type="text" name="user" id="userField" value="John Doe" ng-model="user" />
-                <select ng-model="currentRoom" ng-change="setCurrentRoom(currentRoom)" ng-options="r.name for r in rooms"></select>
+                <select ng-model="currentRoom" ng-change="setCurrentRoom(currentRoom)" 
+                  ng-options="r.name for r in rooms" id="roomSelect"></select>
             </div>
 
             <div id="chat">
@@ -27,18 +35,12 @@
 
             <div id="footer">
                 <form ng-submit="submitMsg()">
-                    Say something: <input type="text" name="chat" id="textField" ng-model="inputText" />
-                    <input type="button" id="saySomething" value="Submit" ng-click="submitMsg()" />
+                    <input type="text" name="chat" id="textField" ng-model="inputText"
+                     placeholder="Say something" class="ng-pristine ng-valid" />
+                    <input type="button" class="btn btn-primary" id="saySomething" value="Submit" ng-click="submitMsg()" />
                 </form>
             </div>
         </div>
-
-        <script src="@routes.Assets.at("javascripts/vendor/angular-1.1.5.min.js")"></script>
-        <script src="/assets/javascripts/app.js"></script>
-        <script src="/assets/javascripts/services.js"></script>
-        <script src="/assets/javascripts/controllers.js"></script>
-        
+ 
     </body>
 </html>
-
-
