--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,38 +2,55 @@ body {
     font-family: helvetica;
     color: #333;
     padding-left: 25px;
+    background: #CCC;
 }
 
 #chat {
     min-height: 200px;
     right: 10px;
     left: 30px;
+    background: #AAA;
+    width: 420px;
 }
 
 .msg {
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px;
     width: 400px;
+    background: #FF9966;
 }
 
 .others {
-    background: lightblue;
+    background: #99D8FF;
 }
 
 #textField {
-    width: 300px;
+    width: 320px;
+    position: relative;
+    top: 4px;
+}
+
+#userField {
+    width: 210px;
+    position: relative;
+    top: 1px;
 }
 
 #header {
+    color: #EEE;
     width: 400px;
-    height: 40px;
+    height: 34px;
     font-weight: bold;
+    padding: 10px;
+    background: #666;
 }
 
 #footer {
+    color: #EEE;
     width: 400px;
-    height: 40px;
+    height: 34px;
     font-weight: bold;
+    padding: 10px;
+    background: #666;
 }
 
 .fadeIn-hide, .fadeIn-show {
@@ -54,4 +71,7 @@ body {
 }
 .fadeIn-hide.fadeIn-hide-active {
     opacity:0;
+}
+#roomSelect {
+    width: 80px;
 }
