switch AngularJS and Bootstrap to WebJars

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,10 +6,10 @@
     <head>
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.min.css")">
+        <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.css"))">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
-        <script src="@routes.Assets.at("javascripts/vendor/angular-1.1.5.min.js")"></script>
+        <script src="@routes.WebJarAssets.at(WebJarAssets.locate("angular.min.js"))"></script>
         <script src="@routes.Assets.at("javascripts/app.js")"></script>
         <script src="@routes.Assets.at("javascripts/services.js")"></script>
         <script src="@routes.Assets.at("javascripts/controllers.js")"></script>
@@ -36,7 +36,7 @@
             <div id="footer">
                 <form ng-submit="submitMsg()">
                     <input type="text" name="chat" id="textField" ng-model="inputText"
-                     placeholder="Say something" class="ng-pristine ng-valid" />
+                     placeholder="Say something" class="ng-pristine ng-valid input-block-level" />
                     <input type="button" class="btn btn-primary" id="saySomething" value="Submit" ng-click="submitMsg()" />
                 </form>
             </div>
