Kibana / LogStash-style logging, backed by ElasticSearch

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -25,10 +25,8 @@
             </div>
 
             <div id="chat">
-                <div class="{{msg.who}} msg" ng-repeat="msg in msgs | limitTo:-10"
-                ng-class="msg.user === 'Juliet' ? 'juliet' : msg.user !== user ? 'others' : ''" 
-                data-ng-show="hidden == false" data-ng-hide="hidden == true"
-                data-ng-animate="'fadeIn'">{{msg.time}}<br/>
+                <div class="{{msg.who}} msg" ng-repeat="msg in msgs | limitTo:-3"
+                ng-class="msg.user === 'Juliet' ? 'juliet' : msg.user !== user ? 'others' : ''">{{msg.time}}<br/>
                     <strong>{{msg.user}} says: </strong>{{msg.text}}<br/>
                 </div>
             </div>
