Cleanup; Implicits; Modularization

--- a/app/views/react_scala_js.scala.html
+++ b/app/views/react_scala_js.scala.html
@@ -14,11 +14,13 @@
         <script src="//fb.me/JSXTransformer-0.8.0.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 
+        <script type="text/javascript" src="assets/js/vendor/moment.min.js"></script>
+
         <script type="text/javascript" src="assets/js/react-scala-js.js"></script>
 
-        <script type="text/javascript" src="/assets/scala-js/example-extdeps.js"></script>
-        <script type="text/javascript" src="/assets/scala-js/example-intdeps.js"></script>
-        <script type="text/javascript" src="/assets/scala-js/example.js"></script>
+        <script type="text/javascript" src="assets/scala-js/example-extdeps.js"></script>
+        <script type="text/javascript" src="assets/scala-js/example-intdeps.js"></script>
+        <script type="text/javascript" src="assets/scala-js/example.js"></script>
 
         <script type="text/jsx" src="assets/js/react-app.js"></script>
 
