optimizeJS - closure compiler

--- a/app/views/react_scala_js_opt.scala.html
+++ b/app/views/react_scala_js_opt.scala.html
@@ -15,7 +15,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
         <script type="text/javascript" src="assets/js/vendor/moment.min.js"></script>
 
-        <script type="text/javascript" src="assets/js/react-scala-js.js"></script>
+        <script type="text/javascript" src="assets/js/react-interop.js"></script>
         <script type="text/javascript" src="assets/scala-js-opt/example-opt.js"></script>
         <script type="text/jsx" src="assets/js/react-app.js"></script>
     </body>
