--- a/app/views/react_scala_js.scala.html
+++ b/app/views/react_scala_js.scala.html
@@ -16,7 +16,7 @@
 
         <script type="text/javascript" src="assets/js/vendor/moment.min.js"></script>
 
-        <script type="text/javascript" src="assets/js/react-scala-js.js"></script>
+        <script type="text/javascript" src="assets/js/react-interop.js"></script>
 
         <script type="text/javascript" src="assets/scala-js/example-extdeps.js"></script>
         <script type="text/javascript" src="assets/scala-js/example-intdeps.js"></script>
