restore react-app.js for initial ReactJS example

--- a/app/views/react_scala_js.scala.html
+++ b/app/views/react_scala_js.scala.html
@@ -22,7 +22,7 @@
         <script type="text/javascript" src="assets/scala-js/example-intdeps.js"></script>
         <script type="text/javascript" src="assets/scala-js/example.js"></script>
 
-        <script type="text/jsx" src="assets/js/react-app.js"></script>
+        <script type="text/jsx" src="assets/js/react-app-scalajs.js"></script>
 
     </body>
 </html>
