--- a/app/views/react_scala_js_opt.scala.html
+++ b/app/views/react_scala_js_opt.scala.html
@@ -17,6 +17,6 @@
 
         <script type="text/javascript" src="assets/js/react-interop.js"></script>
         <script type="text/javascript" src="assets/scala-js-opt/example-opt.js"></script>
-        <script type="text/jsx" src="assets/js/react-app.js"></script>
+        <script type="text/jsx" src="assets/js/react-app-scalajs.js"></script>
     </body>
 </html>
