Using modified EventSource polyfill to ensure IE 10 and 11 compatibility
Without polyfill, Server Sent Events are not supported in Internet
Explorer. The applied polyfill works with IE 10 and 11 as is, with
a potential for running with versions 8 and 9.

Forked from:
https://github.com/Yaffle/EventSource

Fork at:
https://github.com/matthiasn/EventSource

--- a/app/views/react.scala.html
+++ b/app/views/react.scala.html
@@ -9,6 +9,8 @@
     <body>
         <div id="chat-app"></div>
 
+        <script src="/assets/js/vendor/eventsource.js"></script>
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="//fb.me/react-0.8.0.min.js"></script>
         <script src="//fb.me/JSXTransformer-0.8.0.js"></script>
