--- a/app/views/react_scala_js.scala.html
+++ b/app/views/react_scala_js.scala.html
@@ -9,6 +9,8 @@
     <body>
         <div id="chat-app"></div>
 
+        <script src="/assets/js/vendor/eventsource.js"></script>
+
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="//fb.me/react-0.8.0.min.js"></script>
         <script src="//fb.me/JSXTransformer-0.8.0.js"></script>
